# cv-system

./: .gitignore  FEATURES.md  LICENSE  ORCID_OAUTH_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.py
cv_manager/: __init__.py  cli.py
cv_manager/data/: __init__.py  bibtex.py  citations.py  models.py  orcid.py
cv_manager/templates/: academic-uk.j2  academic-us.j2  base.j2  promotion copy.j2  promotion.j2  test.j2
cv_manager/templates/components/: grants.j2  publications.j2
cv_manager/utils/: __init__.py  helpers.py  latex_helpers.py
cv_manager/web/: __init__.py  app.py
cv_manager/web/templates/: base.html  dashboard.html  grants.html  import_bibtex.html  import_orcid.html  orcid_connect.html  orcid_sync.html  orcid_sync_results.html  personal.html  publications.html  service.html  talks.html  teaching.html
examples/: README.md  grants.yaml  knowledge_transfer.yaml  personal.yaml  public_engagement.yaml  publications.yaml  service.yaml  talks.yaml  teaching.yaml
examples/jason-hartford/data/: config.yaml  grants.yaml  personal.yaml  publications.yaml  service.yaml  talks.yaml  teaching.yaml
scripts/: import_from_research.py
